--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     },
     "dependencies": {
         "bootstrap": "4.1.1",
-        "jquery": "3.3.1"
+        "jquery": "3.3.1",
+        "startbootstrap-half-slider": "^4.1.1"
     },
     "devDependencies": {
         "browser-sync": "2.24.5",
